--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ p {
 /* Testimonial Section */
 
 #testimonials {
-  background-color: #065c6f;
+  background-color: #e94560;
 }
 
 .testimonial-text {
@@ -128,7 +128,7 @@ p {
 
 
 #press {
-  background-color: #065c6f;
+  background-color: #e94560;
   padding-bottom: 3%;
 }
 
